# nutribaby

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: rda_by_age.json
src/db/: models.py  queries.py  schema.sql
src/llm/: client.py  extractors.py  prompts.py
src/nutrition/: lookup.py  rda.py  usda_client.py
src/safety/: rules.py
src/ui/: analysis.py  home.py  landing.py  log_meal.py  styles.py
tests/: eval_dataset.json  run_eval.py  test_extractors.py
