[project]
name = "nutribaby"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # pycodestyle, pyflakes, isort, pyupgrade

[tool.ruff.lint.per-file-ignores]
# HTML strings in UI files routinely exceed 100 chars — not a Python readability issue
"src/ui/*.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
